New index page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
     <header>
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       <nav>
+          <li><a href="{{ "/" | absolute_url }}" title="Articles">Articles</a></li>
+          <li><a href="{{ "/links.html" | absolute_url }}" title="Links">Links</a></li>
+          <li><a href="{{ "/about.html" | absolute_url }}" title="About">About</a></li>
+      </nav>
+<!--      <nav>
         <ul>
           <li><a href="{{ "/comp/" | absolute_url }}" title="Articles on computing">Computing</a></li>
           <li><a href="{{ "/games/" | absolute_url }}" title="Articles on video games">Games</a></li>
@@ -21,7 +26,7 @@
           <li><a href="{{ "/opinion/" | absolute_url }}" title="Opinion articles">Opinion</a></li>
           <li><a href="{{ "/etc/" | absolute_url }}" title="Other pages">Etc</a></li>
         </ul>
-      </nav>
+      </nav>-->
     </header>
     <main>
 
