--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,6 +10,21 @@ license: none
 
 <p>The following is a list of articles on this site. A few particularly interesting articles (arbitrarily decided) are tagged "hot," and articles posted or updated in the last month or so are also tagged.</p>
 
+<h3>Categories<h3>
+
+<nav>
+  <ul>
+    <li><a href="{{ "/comp/" | absolute_url }}" title="Articles on computing">Computing</a></li>
+    <li><a href="{{ "/games/" | absolute_url }}" title="Articles on video games">Games</a></li>
+    <li><a href="{{ "/rpg/" | absolute_url }}" title="Articles on tabletop roleplaying games">RPGs</a></li>
+    <li><a href="{{ "/tv/" | absolute_url }}" title="Articles on television">TV</a></li>
+    <li><a href="{{ "/opinion/" | absolute_url }}" title="Opinion articles">Opinion</a></li>
+    <li><a href="{{ "/etc/" | absolute_url }}" title="Other pages">Etc</a></li>
+  </ul>
+</nav>
+
+<h3>Full list of articles</h3>
+
 <table class="index">
 {% for post in site.posts  %}
 <tr>
