--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,7 +10,7 @@ license: none
 
 <p>The following is a list of articles on this site. A few particularly interesting articles (arbitrarily decided) are tagged "hot," and articles posted or updated in the last month or so are also tagged.</p>
 
-<h3>Categories<h3>
+<h3>Categories</h3>
 
 <nav>
   <ul>
